@@ -1,3 +1,12 @@
+* Removed the Monad instance entirely and reimplemented the 
+  Applicative instance directly
+  * Now that we examine each side of `(<*>)` together we can 
+    combine errors if both sides fail thus getting the behavior
+    we were seeking.
+* Suddenly, the tests all pass!
+
+---
+
 * Introduced the Env.Parser Applicative instance built atop the
   previous Monad interface.
 * Reimplemented the Example.hs module using the Applicative instance
